# shcrabble

./: .gitignore  LICENSE  README.md  shcrabble.cabal  stack.yaml
app/: Main.hs  Shcrabble.hs  Streaming.hs
src/: Lib.hs  SVG.hs  Trie.hs  Types.hs
