name:                shcrabble
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rkrzr/shcrabble#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Kreuzer
maintainer:          robert.kreuzer@gmail.com
copyright:           Copyright: (c) 2017 Robert Kreuzer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , SVG
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , optparse-applicative
  default-language:    Haskell2010

executable shcrabble
  hs-source-dirs:      app
  main-is:             Shcrabble.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , shcrabble
                     , containers
                     , directory
                     , optparse-applicative
  default-language:    Haskell2010

executable shcrabble_streaming
  hs-source-dirs:      app
  main-is:             Streaming.hs
  -- ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
                       -fdefer-typed-holes
  build-depends:       base
                     , shcrabble
                     , containers
                     , directory
                     , optparse-applicative
  default-language:    Haskell2010

test-suite shcrabble-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shcrabble
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rkrzr/shcrabble
